# odsc_west_2024

./: README.md  pyproject.toml
catboost/: Face_plant.gpx
